--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@ input {
     background-color: #f1dfec;
     height: 1.7em;
     width: 100%;
+    padding: 0px 12px;
 }
 
 #search_icon {
@@ -471,6 +472,10 @@ button {
     #page {
         display: flex;
         flex-direction: column;
+    }
+
+    input {
+        padding: 0px 8px;
     }
 }
 
